<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutFragment"
    android:background="@drawable/homepage_bg">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:id="@+id/abtus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/abtUs"
                android:textColor="@color/yellow"
                android:textSize="36sp"
                android:fontFamily="@font/refrigerator_deluxe_heavy"
                android:textAlignment="center"
                android:layout_marginTop="85dp"/>

            <TextView
                android:id="@+id/Para1"
                android:layout_width="352dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="35dp"
                android:fontFamily="@font/refrigerator_deluxe_heavy"
                android:text="@string/paragraph1"
                android:textAlignment="center"
                android:layout_marginStart="30dp"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:justificationMode="inter_word"/>

            <TextView
                android:id="@+id/Para2"
                android:layout_width="352dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="35dp"
                android:fontFamily="@font/refrigerator_deluxe_heavy"
                android:text="@string/paragraph2"
                android:textAlignment="center"
                android:layout_marginStart="30dp"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:justificationMode="inter_word"/>

            <TextView
                android:id="@+id/Para3"
                android:layout_width="352dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="35dp"
                android:fontFamily="@font/refrigerator_deluxe_heavy"
                android:text="@string/paragraph3"
                android:textAlignment="center"
                android:layout_marginStart="30dp"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:justificationMode="inter_word"/>






        </LinearLayout>

    </ScrollView>

</FrameLayout>
